[gd_scene load_steps=2 format=3 uid="uid://cmotapproachsel"]

[ext_resource type="Script" path="res://scripts/mars_odyssey_trek/approach_selector.gd" id="1_approach"]

[node name="ApproachSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_approach")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.06, 0.1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="MainLayout" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="VBoxContainer" parent="MarginContainer/MainLayout"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="MarginContainer/MainLayout/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "CONSTRUCTION APPROACH"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="MarginContainer/MainLayout/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Where will your ship be built?"
horizontal_alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="MarginContainer/MainLayout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="DetailsPanel" type="PanelContainer" parent="MarginContainer/MainLayout"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 180)

[node name="DetailsContent" type="VBoxContainer" parent="MarginContainer/MainLayout/DetailsPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HBox" type="HBoxContainer" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="LeftColumn" type="VBoxContainer" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/MarginContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/MarginContainer/HBox/LeftColumn"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Select an Approach"

[node name="Separator" type="HSeparator" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/MarginContainer/HBox/LeftColumn"]
layout_mode = 2

[node name="LaymanLabel" type="Label" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/MarginContainer/HBox/LeftColumn"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Choose from the options above"
autowrap_mode = 2

[node name="PowerUserLabel" type="Label" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/MarginContainer/HBox/LeftColumn"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Technical details will appear here"
autowrap_mode = 2

[node name="RightColumn" type="VBoxContainer" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/MarginContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 5

[node name="StatsTitle" type="Label" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/MarginContainer/HBox/RightColumn"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Statistics"

[node name="StatsLabel" type="Label" parent="MarginContainer/MainLayout/DetailsPanel/DetailsContent/MarginContainer/HBox/RightColumn"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "Reliability: --
Fuel Multiplier: --
Cost Multiplier: --
Prep Time: --"
